src/test/ui/feature-gates/feature-gate-ffi_pure.rs
#![crate_type = "lib"]

extern {
    #[ffi_pure] //~ ERROR the `#[ffi_pure]` attribute is an experimental feature
    pub fn foo();
}
